# zynaddsubfx-fork

./: .gitignore
src/: CMakeLists.txt  main.cpp
src/DSP/: SVFilter.cpp
src/Misc/: Bank.cpp  Util.h  XMLwrapper.cpp
src/Tests/: AdNoteTest.cpp  AdNoteTest.h  CMakeLists.txt  ControllerTest.cpp  EchoTest.cpp  MicrotonalTest.cpp  OscilGenTest.cpp  PadNoteTest.cpp  PluginTest.cpp  RandTest.cpp  SubNoteTest.cpp  UnisonTest.cpp  XMLwrapperTest.cpp
